add colorscheme toggle

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,20 +1,24 @@
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
+@custom-variant dark (&:where(.dark, .dark *));
 
-:root {
-  --background-color: #fff;
-  --text-color: #111;
+@theme {
+  --font-sans: InterVariable, sans-serif;
+
+  --color-background: #fff;
+  --color-text: #111;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: rgb(20, 20, 20);
-    --text-color: rgb(230, 230, 230);
+@layer theme {
+  .dark {
+    --color-background: #111;
+    --color-text: #fff;
   }
 }
 
-body {
-  background-color: var(--background-color);
-  color: var(--text-color);
+@layer components {
+  body {
+    background-color: var(--color-background);
+    color: var(--color-text);
+  }
 }
